--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/josephshim02/learning-vue#readme",
   "devDependencies": {
+    "json-server": "^1.0.0-beta.3",
     "vite": "^6.3.6"
   }
 }
