Ep 14 Toggling elements
Right now uses attribute of the child "show"
Could also do this by emitting an event from the child (AssignmentList)

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"npm run dev\" \"npx json-server db.json -p 3001\"",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -22,6 +23,7 @@
   },
   "homepage": "https://github.com/josephshim02/learning-vue#readme",
   "devDependencies": {
+    "concurrently": "^9.2.1",
     "json-server": "^1.0.0-beta.3",
     "vite": "^6.3.6"
   }
